<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_recipe"
        android:title="@string/nav_recipe" />

    <item
        android:id="@+id/navigation_meal_plan"
        android:icon="@drawable/ic_meal_plan"
        android:title="@string/nav_meal_plan" />

    <item
        android:id="@+id/navigation_grocery"
        android:icon="@drawable/ic_grocery"
        android:title="@string/nav_grocery" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu> 